--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -16,14 +16,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/urbanist": "0.2.3",
-    "@expo/react-native-action-sheet": "^4.0.1",
+    "@expo/react-native-action-sheet": "4.0.1",
     "@hookform/resolvers": "3.3.4",
     "@ramble/api": "workspace:*",
     "@ramble/database": "workspace:*",
     "@ramble/shared": "workspace:*",
     "@ramble/tailwind-config": "workspace:*",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-menu/menu": "1.0.2",
     "@rnmapbox/maps": "10.1.21",
@@ -54,7 +54,7 @@
     "expo-location": "16.5.5",
     "expo-media-library": "~15.9.2",
     "expo-network": "~5.8.0",
-    "expo-router": "3.4.9",
+    "expo-router": "3.4.10",
     "expo-splash-screen": "0.26.5",
     "expo-status-bar": "1.11.1",
     "expo-system-ui": "2.9.4",
