--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -29,10 +29,10 @@
     "@rnmapbox/maps": "10.1.21",
     "@sentry/react-native": "5.20.0",
     "@shopify/flash-list": "1.6.3",
-    "@tanstack/react-query": "4.36.1",
-    "@trpc/client": "10.45.2",
-    "@trpc/react-query": "10.45.2",
-    "@trpc/server": "10.45.2",
+    "@tanstack/react-query": "5.35.1",
+    "@trpc/client": "11.0.0-rc.364",
+    "@trpc/react-query": "11.0.0-rc.364",
+    "@trpc/server": "11.0.0-rc.364",
     "class-variance-authority": "0.7.0",
     "d3-shape": "3.2.0",
     "dayjs": "1.11.11",
