--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -34,8 +34,10 @@
     "@ramble/tailwind-config": "workspace:*",
     "@sentry/nextjs": "7.113.0",
     "@tailwindcss/container-queries": "0.1.1",
+    "@tanstack/react-query": "5.35.1",
     "@tanstack/react-table": "8.16.0",
-    "@trpc/server": "10.45.2",
+    "@trpc/react-query": "11.0.0-rc.364",
+    "@trpc/server": "11.0.0-rc.364",
     "@vercel/analytics": "1.2.2",
     "@vercel/edge": "1.1.1",
     "axios": "1.6.8",
