--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,7 +16,7 @@
     "@ramble/server-schemas": "workspace:*",
     "@ramble/server-services": "workspace:*",
     "@ramble/shared": "workspace:*",
-    "@trpc/server": "10.45.2",
+    "@trpc/server": "11.0.0-rc.364",
     "@turf/bbox": "7.0.0-alpha.116",
     "@turf/center": "7.0.0-alpha.116",
     "@turf/helpers": "7.0.0-alpha.116",
