--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,8 @@
       },
       "recommended": true,
       "correctness": {
-        "noUnusedVariables": "error"
+        "noUnusedVariables": "error",
+        "noUnusedImports": "error"
       },
       "style": {
         "noNonNullAssertion": "off"
