--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -40,6 +40,7 @@
     "@trpc/server": "11.0.0-rc.366",
     "@vercel/analytics": "1.2.2",
     "@vercel/edge": "1.1.1",
+    "@vercel/functions": "^1.0.2",
     "axios": "1.6.8",
     "blurhash": "2.0.5",
     "class-variance-authority": "0.7.0",
