--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ tsconfig.tsbuildinfo
 fly.wireguard.conf
 
 pc-api-8703296620103690660-58-0d0aff733697.json
+ramble-402909-firebase-adminsdk-4avea-898ffc7a0b.json
 
 tailwind.css
 
