--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -54,6 +54,7 @@
     "expo-location": "16.5.5",
     "expo-media-library": "~15.9.2",
     "expo-network": "~5.8.0",
+    "expo-notifications": "~0.27.7",
     "expo-router": "3.4.10",
     "expo-splash-screen": "0.26.5",
     "expo-status-bar": "1.11.1",
