--- a/packages/server/services/package.json
+++ b/packages/server/services/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "2.4.3",
     "blurhash": "2.0.5",
     "dayjs": "1.11.11",
+    "expo-server-sdk": "^3.10.0",
     "flickr-sdk": "7.0.0-beta.7",
     "jsonwebtoken": "9.0.2",
     "loops": "2.0.0",
