--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -4,6 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "dev": "APP_VARIANT=development expo start --ios --dev-client",
+    "dev:device": "APP_VARIANT=development expo start --dev-client",
     "start": "APP_VARIANT=development expo start --dev-client",
     "build": "pnpm run \"/build:/\"",
     "build:production": "eas build --profile production --platform all --auto-submit",
