--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -33,8 +33,7 @@
       "distribution": "store",
       "pnpm": "8.15.4",
       "env": {
-        "SENTRY_AUTH_TOKEN": "private",
-        "GOOGLE_SERVICES_KEY": "private"
+        "SENTRY_AUTH_TOKEN": "private"
       }
     }
   },
