--- a/apps/expo/.gitignore
+++ b/apps/expo/.gitignore
@@ -4,3 +4,7 @@
 
 expo-env.d.ts
 # @end expo-cli
+
+pc-api-8703296620103690660-58-0d0aff733697.json
+ramble-402909-firebase-adminsdk-4avea-898ffc7a0b.json
+google-services.json
