--- a/renovate.json
+++ b/renovate.json
@@ -49,24 +49,25 @@
     "expo-file-system",
     "expo-font",
     "expo-image-picker",
+    "@react-native-menu/menu",
+    "expo-av",
     "expo-image",
     "expo-linking",
     "expo-localization",
     "expo-location",
     "expo-media-library",
     "expo-network",
-    "expo-av",
-    "expo-video-thumbnails",
     "expo-splash-screen",
     "expo-status-bar",
     "expo-system-ui",
     "expo-updates",
+    "expo-video-thumbnails",
     "expo-web-browser",
     "lucide-react-native",
+    "nanoid",
     "react-native-gesture-handler",
     "react-native-ios-context-menu",
     "react-native-ios-utilities",
-    "@react-native-menu/menu",
     "react-native-progress",
     "react-native-reanimated",
     "react-native-safe-area-context",
