--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,7 +2,7 @@
   "name": "@ramble/database",
   "version": "1.0.0",
   "main": "./index.ts",
-  "files": ["./index.ts", "./types.ts"],
+  "files": ["./index.ts", "./types.ts", "./server.ts"],
   "scripts": {
     "dev": "pnpm with-env prisma studio",
     "db:push": "pnpm with-env prisma db push",
