--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -24,7 +24,7 @@
     "@ramble/shared": "workspace:*",
     "@ramble/tailwind-config": "workspace:*",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/datetimepicker": "8.0.0",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-community/netinfo": "11.1.0",
     "@react-native-menu/menu": "1.0.3",
     "@rnmapbox/maps": "10.1.27",
@@ -37,30 +37,32 @@
     "class-variance-authority": "0.7.0",
     "d3-shape": "3.2.0",
     "dayjs": "1.11.11",
-    "expo": "50.0.17",
+    "expo": "50.0.19",
     "expo-application": "5.8.4",
     "expo-av": "~13.10.6",
     "expo-build-properties": "~0.11.1",
     "expo-clipboard": "5.0.1",
     "expo-constants": "15.4.6",
-    "expo-dev-client": "3.3.11",
+    "expo-dev-client": "3.3.12",
     "expo-device": "5.9.4",
     "expo-file-system": "16.0.9",
     "expo-font": "11.10.3",
     "expo-haptics": "12.8.1",
     "expo-image": "1.10.6",
+    "expo-image-manipulator": "^11.8.0",
     "expo-image-picker": "14.7.1",
+    "expo-insights": "~0.6.1",
     "expo-linear-gradient": "12.7.2",
     "expo-linking": "6.2.2",
     "expo-location": "16.5.5",
     "expo-media-library": "~15.9.2",
     "expo-network": "~5.8.0",
-    "expo-notifications": "~0.27.7",
+    "expo-notifications": "~0.27.8",
     "expo-router": "3.4.10",
     "expo-splash-screen": "0.26.5",
     "expo-status-bar": "1.11.1",
     "expo-system-ui": "2.9.4",
-    "expo-updates": "0.24.12",
+    "expo-updates": "0.24.13",
     "expo-video-thumbnails": "~7.9.0",
     "expo-web-browser": "12.8.2",
     "lucide-react-native": "0.378.0",
@@ -93,7 +95,7 @@
     "@babel/runtime": "7.24.7",
     "@expo/config-plugins": "7.8.4",
     "@types/d3-shape": "3.1.6",
-    "@types/react": "18.3.3",
+    "@types/react": "18.2.79",
     "tailwindcss": "3.3.2",
     "typescript": "5.5.2"
   },
