--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -6,7 +6,7 @@
     "dev": "pnpm with-env next dev",
     "build": "next build",
     "start": "next start",
-    "format": "pnpm dlx @biomejs/biome check --apply-unsafe ./src",
+    "format": "pnpm dlx @biomejs/biome check --write --unsafe ./src",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
