--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "sideEffects": false,
   "scripts": {
-    "format": "pnpm dlx @biomejs/biome check --apply-unsafe ./src",
+    "format": "pnpm dlx @biomejs/biome check --write --unsafe ./src",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
