--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,11 +2,9 @@
   "name": "@ramble/shared",
   "version": "1.0.0",
   "main": "./src/index.ts",
-  "files": [
-    "./src/index.ts"
-  ],
+  "files": ["./src/index.ts"],
   "scripts": {
-    "format": "pnpm dlx @biomejs/biome check --apply-unsafe ./src",
+    "format": "pnpm dlx @biomejs/biome check --write --unsafe ./src",
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
