--- a/packages/server/scripts/package.json
+++ b/packages/server/scripts/package.json
@@ -10,6 +10,7 @@
     "crag": "pnpm with-env ts-node ./src/scraping/get-thecrag.ts",
     "gpt": "pnpm with-env ts-node ./src/export/ramble-gpt.ts",
     "users": "pnpm with-env ts-node ./src/export/initial-users.ts",
+    "p4n": "pnpm with-env ts-node ./src/format/gen-p4n-image-replacements.ts",
     "with-env": "dotenv -e ../../../.env --"
   },
   "sideEffects": false,
